Input padding, Select dropdown not showing when options length is 0 restriction removed, add trivial name on building unit type, fix unit adding on building unit

--- a/src/components/input.css
+++ b/src/components/input.css
@@ -91,6 +91,7 @@
 .InputIcon {
   position: absolute;
   right: 8px;
+  top: 14px;
   color: gray;
   margin-left: 16px;
 }
