--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,8 @@ button {
 input,
 textarea {
   /* margin-top: 3px; */
-  padding: 6px;
+  /* padding: 6px; */
+  padding: 12px 24px 12px 12px;
   border-radius: 4px;
   border-style: solid;
   border-width: 0.5px;
@@ -140,7 +141,8 @@ textarea {
   border-left: 0px;
   border-color: silver;
   border-style: solid;
-  padding: 6px;
+  /* padding: 6px; */
+  padding: 12px;
   /* margin-top: 3px; why? */
   background-color: #f3f3fa;
 }
